--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -21,14 +21,18 @@
     top: 0px;
     left: 0px;
     background: none !important;
-    max-width: 750px;
+    max-width: 650px;
+    margin-left: 10px;
+    margin-right: 10px;
     margin: 0 auto !important;
     float: none !important;
     margin-top: 30px !important;
 }
 
 .max-width {
-    max-width: 750px;
+    max-width: 650px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .course {
