--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -20,7 +20,8 @@
     width: 150px;
     border-radius: 0.25em;
     position: relative;
-    margin-left: 23%;
+    /* make the margin-left: 14% based on the screen size  */
+    margin-left: 14%;
     margin-top: -80px;
     margin-bottom: 0px;
     background: none !important;
@@ -37,8 +38,8 @@
     top: 0px;
     left: 0px;
     background: none !important;
-    max-width: 750px; 
-	margin: 0 auto !important; 
+    max-width: 650px; 
+	margin: 5px auto !important; 
 	float: none !important; 
 }
 
